@@ -19,8 +19,9 @@
 #
 ##############################################################################
 
-from record import Record
+from .exception import RetrofixException
 from .fields import *
+from .record import Record
 
 FILE_HEADER_RECORD = (
         (  1,  2, 'record_code', Const('02')),
@@ -192,7 +193,7 @@ def read(data):
             record = Record.extract(current_line, FILE_FOOTER_RECORD)
         else:
             record = Record.extract(current_line, INDIVIDUAL_2_RECORD)
-            raise BaseException('Invalid record: "%s"' % current_line)
+            raise RetrofixException('Invalid record: "%s"' % current_line)
         records.append(record)
         current_line = lines.pop(0)
     return records
