@@ -19,8 +19,9 @@
 #
 ##############################################################################
 
-from record import Record
+from .exception import RetrofixException
 from .fields import *
+from .record import Record
 
 PRESENTER_HEADER_RECORD = (
         (  1,  2, 'record_code', Const('51')),
@@ -152,7 +153,7 @@ def read(data):
         elif Record.valid(current_line, PRESENTER_FOOTER_RECORD):
             record = Record.extract(current_line, PRESENTER_FOOTER_RECORD)
         else:
-            raise BaseException('Invalid record: "%s"' % current_line)
+            raise RetrofixException('Invalid record: "%s"' % current_line)
         records.append(record)
         current_line = lines.pop(0)
     return records
