@@ -1,3 +1,4 @@
+* Raise RetrofixException instead of BaseException or Exception
 * Inherit RetrofixException from Exception to follow documentation guidelines
 
 Version 0.17 - 2016-01-14
